--- a/search-portal-app/package.json
+++ b/search-portal-app/package.json
@@ -6,8 +6,10 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/react-fontawesome": "0.0.18",
     "axios": "^0.18.0",
+    "dangerously-set-inner-html": "^2.0.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
