--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ node_js:
   - 6.14
 
 
+script: cd search-portal-app
+
 # configure notifications (email, IRC, campfire etc)
 notifications:
   irc: "irc.freenode.org#yourfavouriteroomfortravis"
 
-  
