--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,24 @@
-language: node_js
+# run tests in parallel
+matrix:
+  include:
+    - language: node_js
+      node_js: 6.14
+      before_script:
+        - cd search-portal-app
+      script:
+        - npm start
 
-node_js:
-
-  # current version 6.14.1
-  - 6.14
-
-
-# start app, run process in background, wait, run test script
-script: 
-  - cd search-portal-app
-  - npm run start & sleep 5; npm run test-pa11y;
+  - language: php
+    php:
+      - 5.4
+      - 5.5
+      - 5.6
+    before_script:
+      - cd elgg-plugin/solr_api
 
 
 # configure notifications (email, IRC, campfire etc)
 notifications:
-  irc: "irc.freenode.org#yourfavouriteroomfortravis"
+  email: 
+    - internalfire5@live.com
 
