* updated the kubernetes deployment file * updated readme file

--- a/kubernetes-configuration-files/solr-deployment.yaml
+++ b/kubernetes-configuration-files/solr-deployment.yaml
@@ -12,7 +12,7 @@ spec:
       app: solr
 
   # run 2 pods matching the template
-  #replicas: 2
+  replicas: 2
 
   # create pods using the pod definition in this template
   template:
