--- a/docker-configuration-files/Dockerfile
+++ b/docker-configuration-files/Dockerfile
@@ -48,8 +48,12 @@ RUN mkdir /opt/solr/server/solr/elgg-core/data
 RUN chmod -R 777 /opt/solr/server/solr/elgg-core/
 RUN chmod -R 777 /opt/solr/bin/
 
-RUN sed '/<Directory \/var\/www\/>/a \\tHeader set Access-Control-Allow-Origin "*"' /etc/apache2/apache2.conf
-RUN a2enmod headers
+RUN cp /opt/solr/server/solr-webapp/webapp/WEB-INF/web.xml solr-web-bkup.xml
+ADD /solr-configuration-files/solr-web.xml /opt/solr/server/solr-webapp/webapp/WEB-INF/
+RUN mv /opt/solr/server/solr-webapp/webapp/WEB-INF/solr-web.xml /opt/solr/server/solr-webapp/webapp/WEB-INF/web.xml
+
+#RUN sed '/<Directory \/var\/www\/>/a \\tHeader set Access-Control-Allow-Origin "*"' /etc/apache2/apache2.conf
+#RUN a2enmod headers
 
 # set up task scheduler
 RUN touch /etc/cron.d/groovy-cron
